refactor: collect process to _buildDetailHTML.

--- a/src/builder/template/class.html
+++ b/src/builder/template/class.html
@@ -39,22 +39,8 @@
 <div data-s="memberSummary"><h2>Member Summary</h2></div>
 <div data-s="methodSummary"><h2>Method Summary</h2></div>
 
-<div data-s="staticPublicMembers"></div>
-<div data-s="staticProtectedMembers"></div>
-<div data-s="staticPrivateMembers"></div>
-
-<div data-s="staticPublicMethods"></div>
-<div data-s="staticProtectedMethods"></div>
-<div data-s="staticPrivateMethods"></div>
-
-<div data-s="constructor"></div>
-
-<div data-s="publicMembers"></div>
-<div data-s="protectedMembers"></div>
-<div data-s="privateMembers"></div>
-
-<div data-s="publicMethods"></div>
-<div data-s="protectedMethods"></div>
-<div data-s="privateMethods"></div>
-
-
+<div data-s="staticMemberDetails"></div>
+<div data-s="staticMethodDetails"></div>
+<div data-s="constructorDetails"></div>
+<div data-s="memberDetails"></div>
+<div data-s="methodDetails"></div>
