--- a/src/builder/template/namespace.html
+++ b/src/builder/template/namespace.html
@@ -48,33 +48,13 @@
 <div data-s="enumSummary"><h2>Enum Summary</h2></div>
 <div data-s="callbackSummary"><h2>Callback Summary</h2></div>
 
-<div data-s="publicMemberDocs"></div>
-<div data-s="protectedMemberDocs"></div>
-<div data-s="privateMemberDocs"></div>
-
-<div data-s="publicMethodDocs"></div>
-<div data-s="protectedMethodDocs"></div>
-<div data-s="privateMethodDocs"></div>
-
-<div data-s="publicTypedefDocs"></div>
-<div data-s="protectedTypedefDocs"></div>
-<div data-s="privateTypedefDocs"></div>
-
-<div data-s="publicEventDocs"></div>
-<div data-s="protectedEventDocs"></div>
-<div data-s="privateEventDocs"></div>
-
-<div data-s="publicConstDocs"></div>
-<div data-s="protectedConstDocs"></div>
-<div data-s="privateConstDocs"></div>
-
-<div data-s="publicEnumDocs"></div>
-<div data-s="protectedEnumDocs"></div>
-<div data-s="privateEnumDocs"></div>
-
-<div data-s="publicCallbackDocs"></div>
-<div data-s="protectedCallbackDocs"></div>
-<div data-s="privateCallbackDocs"></div>
+<div data-s="memberDetails"></div>
+<div data-s="methodDetails"></div>
+<div data-s="typedefDetails"></div>
+<div data-s="eventDetails"></div>
+<div data-s="constDetails"></div>
+<div data-s="enumDetails"></div>
+<div data-s="callbackDetails"></div>
 
 <div data-s="sourceCodeWrap">
   <h2>Source Code</h2>
