refactor: collect process to ObjectBuilder.

--- a/src/builder/template/object.html
+++ b/src/builder/template/object.html
@@ -1,27 +1,32 @@
-<p class="header-notice">
-  <span data-s="parentNamespace"></span>
-</p>
-
-<p class="header-notice">
+<div class="header-notice">
+  <div data-s="memberof"></div>
   <span data-s="access"></span>
   <span data-s="kind"></span>
-  <span data-s="requiresLabel">| requires <span data-s="require"></span></span>
-  <span data-s="mixesLabel">| mixes <span data-s="mixes"></span></span>
-  <span data-s="versionLabel">| version <span data-s="version"></span></span>
-  <span data-s="sinceLabel">| since <span data-s="since"></span></span>
-  <span data-s="authorLabel">| author <span data-s="author"></span></span>
-  <span data-s="fileLabel">| file <span data-s="file"></span></span>
-</p>
+  <span data-s="variation">| variation </span>
+  <span data-s="extends">| extends </span>
+  <span data-s="implements">| implements </span>
+  <span data-s="require">| requires </span>
+  <span data-s="mixes">| mixes </span>
+  <span data-s="version">| version </span>
+  <span data-s="since">| since </span>
+  <span data-s="author">| author </span>
+  <span data-s="file">| file </span>
+</div>
 
-<h1 data-s="namespace"></h1>
+<h1 data-s="name"></h1>
+
+<div class="extends-chain" data-s="extendsChainWrap">
+  <div data-s="extendsChain"><h4>Extends Chain:</h4></div>
+  <div data-s="directSubclass"><h4>Direct Subclass:</h4></div>
+  <div data-s="indirectSubclass"><h4>Indirect Subclass:</h4></div>
+</div>
 
 <div class="deprecated" data-s="deprecated"></div>
 <div class="experimental" data-s="experimental"></div>
-<div data-s="namespaceDesc"></div>
-<div data-s="variation"></div>
+<div data-s="description"></div>
 
 <div class="see" data-s="seeWrap">
-  <h4 data-s="see">See: <span data-s="seeLink"></span></h4>
+  <h4 data-s="see">See: </h4>
 </div>
 
 <div data-s="fileexampleDocs">
@@ -36,88 +41,31 @@
   </ul>
 </div>
 
-<h2 data-s="namespaceSummary">Namespace Summary</h2>
-<div data-s="summaryPublicNamespaceDocs"></div>
-<div data-s="summaryProtectedNamespaceDocs"></div>
-<div data-s="summaryPrivateNamespaceDocs"></div>
+<div data-s="namespaceSummary"><h2>Namespace Summary</h2></div>
+<div data-s="classSummary"><h2>Class Summary</h2></div>
+<div data-s="interfaceSummary"><h2>Interface Summary</h2></div>
+<div data-s="mixinSummary"><h2>Mixin Summary</h2></div>
+<div data-s="staticMemberSummary"><h2>Static Member Summary</h2></div>
+<div data-s="staticMethodSummary"><h2>Static Method Summary</h2></div>
+<div data-s="constructorSummary"><h2>Constructor Summary</h2></div>
+<div data-s="memberSummary"><h2>Member Summary</h2></div>
+<div data-s="methodSummary"><h2>Method Summary</h2></div>
+<div data-s="typedefSummary"><h2>Typedef Summary</h2></div>
+<div data-s="eventSummary"><h2>Event Summary</h2></div>
+<div data-s="constSummary"><h2>Const Summary</h2></div>
+<div data-s="enumSummary"><h2>Enum Summary</h2></div>
+<div data-s="callbackSummary"><h2>Callback Summary</h2></div>
 
-<h2 data-s="classSummary">Class Summary</h2>
-<div data-s="summaryPublicClassDocs"></div>
-<div data-s="summaryProtectedClassDocs"></div>
-<div data-s="summaryPrivateClassDocs"></div>
-
-<h2 data-s="interfaceSummary">Interface Summary</h2>
-<div data-s="summaryPublicInterfaceDocs"></div>
-<div data-s="summaryProtectedInterfaceDocs"></div>
-<div data-s="summaryPrivateInterfaceDocs"></div>
-
-<h2 data-s="mixinSummary">Mixin Summary</h2>
-<div data-s="summaryPublicMixinDocs"></div>
-<div data-s="summaryProtectedMixinDocs"></div>
-<div data-s="summaryPrivateMixinDocs"></div>
-
-<h2 data-s="memberSummary">Member Summary</h2>
-<div data-s="summaryPublicMemberDocs"></div>
-<div data-s="summaryProtectedMemberDocs"></div>
-<div data-s="summaryPrivateMemberDocs"></div>
-
-<h2 data-s="methodSummary">Method Summary</h2>
-<div data-s="summaryPublicMethodDocs"></div>
-<div data-s="summaryProtectedMethodDocs"></div>
-<div data-s="summaryPrivateMethodDocs"></div>
-
-<h2 data-s="typedefSummary">Typedef Summary</h2>
-<div data-s="summaryPublicTypedefDocs"></div>
-<div data-s="summaryProtectedTypedefDocs"></div>
-<div data-s="summaryPrivateTypedefDocs"></div>
-
-<h2 data-s="eventSummary">Event Summary</h2>
-<div data-s="summaryPublicEventDocs"></div>
-<div data-s="summaryProtectedEventDocs"></div>
-<div data-s="summaryPrivateEventDocs"></div>
-
-<h2 data-s="constSummary">Const Summary</h2>
-<div data-s="summaryPublicConstDocs"></div>
-<div data-s="summaryProtectedConstDocs"></div>
-<div data-s="summaryPrivateConstDocs"></div>
-
-<h2 data-s="enumSummary">Enum Summary</h2>
-<div data-s="summaryPublicEnumDocs"></div>
-<div data-s="summaryProtectedEnumDocs"></div>
-<div data-s="summaryPrivateEnumDocs"></div>
-
-<h2 data-s="callbackSummary">Callback Summary</h2>
-<div data-s="summaryPublicCallbackDocs"></div>
-<div data-s="summaryProtectedCallbackDocs"></div>
-<div data-s="summaryPrivateCallbackDocs"></div>
-
-<div data-s="publicMemberDocs"></div>
-<div data-s="protectedMemberDocs"></div>
-<div data-s="privateMemberDocs"></div>
-
-<div data-s="publicMethodDocs"></div>
-<div data-s="protectedMethodDocs"></div>
-<div data-s="privateMethodDocs"></div>
-
-<div data-s="publicTypedefDocs"></div>
-<div data-s="protectedTypedefDocs"></div>
-<div data-s="privateTypedefDocs"></div>
-
-<div data-s="publicEventDocs"></div>
-<div data-s="protectedEventDocs"></div>
-<div data-s="privateEventDocs"></div>
-
-<div data-s="publicConstDocs"></div>
-<div data-s="protectedConstDocs"></div>
-<div data-s="privateConstDocs"></div>
-
-<div data-s="publicEnumDocs"></div>
-<div data-s="protectedEnumDocs"></div>
-<div data-s="privateEnumDocs"></div>
-
-<div data-s="publicCallbackDocs"></div>
-<div data-s="protectedCallbackDocs"></div>
-<div data-s="privateCallbackDocs"></div>
+<div data-s="staticMemberDetails"></div>
+<div data-s="staticMethodDetails"></div>
+<div data-s="constructorDetails"></div>
+<div data-s="memberDetails"></div>
+<div data-s="methodDetails"></div>
+<div data-s="typedefDetails"></div>
+<div data-s="eventDetails"></div>
+<div data-s="constDetails"></div>
+<div data-s="enumDetails"></div>
+<div data-s="callbackDetails"></div>
 
 <div data-s="sourceCodeWrap">
   <h2>Source Code</h2>
