--- a/src/builder/template/object.html
+++ b/src/builder/template/object.html
@@ -13,32 +13,34 @@
   <span data-s="file">| file </span>
 </div>
 
-<h1 data-s="name"></h1>
+<div class="self-detail">
+  <h1 data-s="name"></h1>
 
-<div class="extends-chain" data-s="extendsChainWrap">
-  <div data-s="extendsChain"><h4>Extends Chain:</h4></div>
-  <div data-s="directSubclass"><h4>Direct Subclass:</h4></div>
-  <div data-s="indirectSubclass"><h4>Indirect Subclass:</h4></div>
-</div>
+  <div class="extends-chain" data-s="extendsChainWrap">
+    <div data-s="extendsChain"><h4>Extends Chain:</h4></div>
+    <div data-s="directSubclass"><h4>Direct Subclass:</h4></div>
+    <div data-s="indirectSubclass"><h4>Indirect Subclass:</h4></div>
+  </div>
 
-<div class="deprecated" data-s="deprecated"></div>
-<div class="experimental" data-s="experimental"></div>
-<div data-s="description"></div>
+  <div class="deprecated" data-s="deprecated"></div>
+  <div class="experimental" data-s="experimental"></div>
+  <div data-s="description"></div>
 
-<div class="see" data-s="seeWrap">
-  <h4 data-s="see">See: </h4>
-</div>
+  <div class="see" data-s="seeWrap">
+    <h4 data-s="see">See: </h4>
+  </div>
 
-<div data-s="fileexampleDocs">
-  <h2>Example</h2>
-  <pre class="prettyprint" data-s="fileexampleDoc"><code data-s="fileexampleCode"></code></pre>
-</div>
+  <div data-s="fileexampleDocs">
+    <h2>Example</h2>
+    <pre class="prettyprint" data-s="fileexampleDoc"><code data-s="fileexampleCode"></code></pre>
+  </div>
 
-<div data-s="todoWrap">
-  <h2>TODO</h2>
-  <ul>
-    <li data-s="todo"></li>
-  </ul>
+  <div data-s="todoWrap">
+    <h2>TODO</h2>
+    <ul>
+      <li data-s="todo"></li>
+    </ul>
+  </div>
 </div>
 
 <div data-s="namespaceSummary"><h2>Namespace Summary</h2></div>
