fix: support require in detail.

--- a/src/builder/template/details.html
+++ b/src/builder/template/details.html
@@ -65,6 +65,8 @@
     <h4 data-s="see">See: <span data-s="seeLink"></span></h4>
   </div>
 
+  <h4 data-s="require">Require: </h4>
+
   <div data-s="authorWrap">
     <h4>Author: <span data-s="author"></span></h4>
   </div>
