feat: support index.html

--- a/src/builder/template/index.html
+++ b/src/builder/template/index.html
@@ -1,37 +1,17 @@
-<h1>
-  <span data-s="title"></span>
-  <span class="version">version: <span data-s="version"></span></span>
-  <span class="url"><a data-s="url"></a></span>
-</h1>
+<div class="self-detail">
+  <h1>
+    <span data-s="title"></span>
+  <span class="header-notice">
+    <span class="version" data-s="version">version: </span>
+    <span class="url"><a data-s="url"></a></span>
+  </span>
+  </h1>
+  <div data-s="description"></div>
+</div>
 
-<div data-s="description"></div>
-
-<h2 data-s="namespaceSummary">Namespace Summary</h2>
-<div data-s="summaryPublicNamespaceDocs"></div>
-<div data-s="summaryProtectedNamespaceDocs"></div>
-<div data-s="summaryPrivateNamespaceDocs"></div>
-
-<h2 data-s="moduleSummary">Module Summary</h2>
-<div data-s="summaryPublicModuleDocs"></div>
-<div data-s="summaryProtectedModuleDocs"></div>
-<div data-s="summaryPrivateModuleDocs"></div>
-
-<h2 data-s="classSummary">Class Summary</h2>
-<div data-s="summaryPublicClassDocs"></div>
-<div data-s="summaryProtectedClassDocs"></div>
-<div data-s="summaryPrivateClassDocs"></div>
-
-<h2 data-s="interfaceSummary">Interface Summary</h2>
-<div data-s="summaryPublicInterfaceDocs"></div>
-<div data-s="summaryProtectedInterfaceDocs"></div>
-<div data-s="summaryPrivateInterfaceDocs"></div>
-
-<h2 data-s="mixinSummary">Mixin Summary</h2>
-<div data-s="summaryPublicMixinDocs"></div>
-<div data-s="summaryProtectedMixinDocs"></div>
-<div data-s="summaryPrivateMixinDocs"></div>
-
-<h2 data-s="fileSummary">File Summary</h2>
-<div data-s="summaryPublicFileDocs"></div>
-<div data-s="summaryProtectedFileDocs"></div>
-<div data-s="summaryPrivateFileDocs"></div>
+<div data-s="moduleSummary"><h2>Module Summary</h2></div>
+<div data-s="namespaceSummary"><h2>Namespace Summary</h2></div>
+<div data-s="classSummary"><h2>Class Summary</h2></div>
+<div data-s="interfaceSummary"><h2>Interface Summary</h2></div>
+<div data-s="mixinSummary"><h2>Mixin Summary</h2></div>
+<div data-s="fileSummary"><h2>File Summary</h2></div>
