--- a/src/builder/template/nav.html
+++ b/src/builder/template/nav.html
@@ -1,4 +1,4 @@
-<h1><a href="./">Home</a> | <a href="readme.html">README</a></h1>
+<h1><a href="./">HOME</a> | <a href="readme.html">README</a></h1>
 
 <h2>Classes</h2>
 <ul>
