--- a/src/builder/template/object.html
+++ b/src/builder/template/object.html
@@ -3,44 +3,36 @@
   <span data-s="access"></span>
   <span data-s="kind"></span>
   <span data-s="variation">| variation </span>
-  <span data-s="extends">| extends </span>
-  <span data-s="implements">| implements </span>
-  <span data-s="require">| requires </span>
-  <span data-s="mixes">| mixes </span>
   <span data-s="version">| version </span>
   <span data-s="since">| since </span>
-  <span data-s="author">| author </span>
   <span data-s="file">| file </span>
 </div>
 
-<div class="self-detail">
+<div class="self-detail detail">
   <h1 data-s="name"></h1>
 
-  <div class="extends-chain" data-s="extendsChainWrap">
-    <div data-s="extendsChain"><h4>Extends Chain:</h4></div>
-    <div data-s="directSubclass"><h4>Direct Subclass:</h4></div>
-    <div data-s="indirectSubclass"><h4>Indirect Subclass:</h4></div>
-  </div>
+  <!--<span data-s="extends">| extends </span>-->
+  <div class="flat-list" data-s="extendsChain"><h4>Extends:</h4></div>
+  <div class="flat-list" data-s="directSubclass"><h4>Direct Subclass:</h4></div>
+  <div class="flat-list" data-s="indirectSubclass"><h4>Indirect Subclass:</h4></div>
+  <div class="flat-list" data-s="implements"><h4>Implements:</h4></div>
+  <div class="flat-list" data-s="mixes"><h4>Mixes</h4></div>
 
   <div class="deprecated" data-s="deprecated"></div>
   <div class="experimental" data-s="experimental"></div>
   <div data-s="description"></div>
 
-  <div class="see" data-s="seeWrap">
-    <h4 data-s="see">See: </h4>
-  </div>
+  <div data-s="see"><h4>See:</h4></div>
+
+  <div data-s="require"><h4>Requires:</h4></div>
 
   <div data-s="fileexampleDocs">
-    <h2>Example</h2>
+    <h4>Example:</h4>
     <pre class="prettyprint" data-s="fileexampleDoc"><code data-s="fileexampleCode"></code></pre>
   </div>
 
-  <div data-s="todoWrap">
-    <h2>TODO</h2>
-    <ul>
-      <li data-s="todo"></li>
-    </ul>
-  </div>
+  <div data-s="author"><h4>Author:</h4></div>
+  <div data-s="todo"><h4>TODO:</h4></div>
 </div>
 
 <div data-s="namespaceSummary"><h2>Namespace Summary</h2></div>
