--- a/src/builder/template/details.html
+++ b/src/builder/template/details.html
@@ -1,5 +1,5 @@
 <h2 data-s="title"></h2>
-<div data-s="detail">
+<div class="detail" data-s="detail">
   <h3 data-s="anchor">
     <span class="access" data-s="access"></span>
     <span class="virtual" data-s="virtual"></span>
@@ -7,53 +7,44 @@
     <span data-s="readonly"></span>
     <span data-s="name"></span><span data-s="signature"></span>
     <span class="right-info">
-      <span class="version" data-s="versionWrap">version <span data-s="version"></span></span>
-      <span class="since" data-s="sinceLabel">since <span data-s="since"></span></span>
+      <span class="version" data-s="version">version </span>
+      <span class="since" data-s="since">since </span>
     </span>
   </h3>
 
   <div class="deprecated" data-s="deprecated"></div>
   <div class="experimental" data-s="experimental"></div>
-
   <div data-s="description">description</div>
-
-  <div data-s="inheritWrap">
-    <h4>Override: <span data-s="inherit"></span></h4>
-  </div>
-
-  <div data-s="defaultvalueWrap">
-    <h4>Default: <span data-s="defaultvalue"></span></h4>
-  </div>
+  <div data-s="inherit"><h4>Override: </h4></div>
+  <div data-s="defaultvalue"><h4>Default: </h4></div>
 
   <div data-s="properties"></div>
 
   <div class="return-params" data-s="returnParams">
-    <h4>Return: <span class="return-type" data-s="returnType"></span></h4>
-    <div class="return-desc" data-s="returnDescription"></div>
+    <h4>Return:</h4>
+    <table>
+      <tr>
+        <td class="return-type" data-s="returnType"></td>
+        <td class="return-desc" data-s="returnDescription"></td>
+      </tr>
+    </table>
     <div data-s="returnProperties"></div>
   </div>
 
-  <div data-s="thisWrap">
-    <h4>This: <span data-s="this"></span></h4>
-  </div>
+  <div data-s="this"><h4>This:</h4> </div>
+  <div data-s="fire"><h4>Fire:</h4></div>
+  <div data-s="listen"><h4>Listen:</h4></div>
 
-  <div data-s="fires">
-    <div data-s="fireEvent">
-      <h4>Fire: <span data-s="event"></span></h4>
-    </div>
-  </div>
-
-  <div data-s="listens">
-    <div data-s="listenEvent">
-      <h4>Listen: <span data-s="event"></span></h4>
-    </div>
-  </div>
-
-  <div class="throws" data-s="throws">
-    <div data-s="throw">
-      <h4>Throw: <span data-s="throwName"></span></h4>
-      <div data-s="throwDesc"></div>
-    </div>
+  <div data-s="throwWrap">
+    <h4>Throw:</h4>
+    <table>
+      <tbody>
+        <tr class="throw" data-s="throw">
+          <td data-s="throwName"></td>
+          <td data-s="throwDesc"></td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 
   <div data-s="example">
@@ -61,20 +52,8 @@
     <pre data-s="exampleDoc" class="prettyprint"><code data-s="exampleCode"></code></pre>
   </div>
 
-  <div class="see" data-s="seeWrap">
-    <h4 data-s="see">See: <span data-s="seeLink"></span></h4>
-  </div>
-
-  <h4 data-s="require">Require: </h4>
-
-  <div data-s="authorWrap">
-    <h4>Author: <span data-s="author"></span></h4>
-  </div>
-
-  <div data-s="todoWrap">
-    <h4>TODO:</h4>
-    <ul>
-      <li data-s="todo"></li>
-    </ul>
-  </div>
+  <div data-s="see"><h4>See:</h4></div>
+  <div data-s="require"><h4>Require:</h4></div>
+  <div data-s="author"><h4>Author:</h4></div>
+  <div data-s="todo"><h4>TODO:</h4></div>
 </div>
