feat: support user script and style.

--- a/src/builder/template/layout.html
+++ b/src/builder/template/layout.html
@@ -11,6 +11,9 @@
       prettyPrint();
     });
   </script>
+
+  <link data-s="userStyle" rel="stylesheet"/>
+  <script data-s="userScript"></script>
 </head>
 <body class="layout-container">
 
