feat: support indirect implements and indirect mixes.

--- a/src/builder/template/object.html
+++ b/src/builder/template/object.html
@@ -11,12 +11,13 @@
 <div class="self-detail detail">
   <h1 data-s="name"></h1>
 
-  <!--<span data-s="extends">| extends </span>-->
   <div class="flat-list" data-s="extendsChain"><h4>Extends:</h4></div>
   <div class="flat-list" data-s="directSubclass"><h4>Direct Subclass:</h4></div>
   <div class="flat-list" data-s="indirectSubclass"><h4>Indirect Subclass:</h4></div>
   <div class="flat-list" data-s="implements"><h4>Implements:</h4></div>
-  <div class="flat-list" data-s="mixes"><h4>Mixes</h4></div>
+  <div class="flat-list" data-s="indirectImplements"><h4>Indirect Implements:</h4></div>
+  <div class="flat-list" data-s="mixes"><h4>Mixes:</h4></div>
+  <div class="flat-list" data-s="indirectMixes"><h4>Indirect Mixes:</h4></div>
 
   <div class="deprecated" data-s="deprecated"></div>
   <div class="experimental" data-s="experimental"></div>
