--- a/src/builder/template/object.html
+++ b/src/builder/template/object.html
@@ -51,6 +51,8 @@
 <div data-s="enumSummary"><h2>Enum Summary</h2></div>
 <div data-s="callbackSummary"><h2>Callback Summary</h2></div>
 
+<div class="inherited-summary" data-s="inheritedSummary"><h2>Inherited Summary</h2></div>
+
 <div data-s="staticMemberDetails"></div>
 <div data-s="staticMethodDetails"></div>
 <div data-s="constructorDetails"></div>
