feat: support (direct and indirect)(implemented and mixed).

--- a/src/builder/template/object.html
+++ b/src/builder/template/object.html
@@ -18,6 +18,10 @@
   <div class="flat-list" data-s="indirectImplements"><h4>Indirect Implements:</h4></div>
   <div class="flat-list" data-s="mixes"><h4>Mixes:</h4></div>
   <div class="flat-list" data-s="indirectMixes"><h4>Indirect Mixes:</h4></div>
+  <div class="flat-list" data-s="directImplemented"><h4>Direct Implemented:</h4></div>
+  <div class="flat-list" data-s="indirectImplemented"><h4>Indirect Implemented:</h4></div>
+  <div class="flat-list" data-s="directMixed"><h4>Direct Mixed:</h4></div>
+  <div class="flat-list" data-s="indirectMixed"><h4>Indirect Mixed:</h4></div>
 
   <div class="deprecated" data-s="deprecated"></div>
   <div class="experimental" data-s="experimental"></div>
