fix: if doc is empty, not show.

--- a/src/builder/template/nav.html
+++ b/src/builder/template/nav.html
@@ -1,31 +1,43 @@
 <h1><a href="./">HOME</a> | <a href="@readme.html">README</a></h1>
 
-<h2>Classes</h2>
-<ul>
-  <li data-s="classDoc"></li>
-</ul>
+<div data-s="classWrap">
+  <h2>Class</h2>
+  <ul>
+    <li data-s="classDoc"></li>
+  </ul>
+</div>
 
-<h2>Interfaces</h2>
-<ul>
-  <li data-s="interfaceDoc"></li>
-</ul>
+<div data-s="interfaceWrap">
+  <h2>Interface</h2>
+  <ul>
+    <li data-s="interfaceDoc"></li>
+  </ul>
+</div>
 
-<h2>Namespaces</h2>
-<ul>
-  <li data-s="namespaceDoc"></li>
-</ul>
+<div data-s="namespaceWrap">
+  <h2>Namespace</h2>
+  <ul>
+    <li data-s="namespaceDoc"></li>
+  </ul>
+</div>
 
-<h2>Modules</h2>
-<ul>
-  <li data-s="moduleDoc"></li>
-</ul>
+<div data-s="moduleWrap">
+  <h2>Module</h2>
+  <ul>
+    <li data-s="moduleDoc"></li>
+  </ul>
+</div>
 
-<h2>Mixins</h2>
-<ul>
-  <li data-s="mixinDoc"></li>
-</ul>
+<div data-s="mixinWrap">
+  <h2>Mixin</h2>
+  <ul>
+    <li data-s="mixinDoc"></li>
+  </ul>
+</div>
 
-<h2>Files</h2>
-<ul>
-  <li data-s="fileDoc"></li>
-</ul>
+<div data-s="fileWrap">
+  <h2>File</h2>
+  <ul>
+    <li data-s="fileDoc"></li>
+  </ul>
+</div>
