--- a/src/builder/template/layout.html
+++ b/src/builder/template/layout.html
@@ -27,5 +27,15 @@
   with <a href="https://github.com/h13i32maru/jsdoc-cloudy">jsdoc-cloudy</a>
   on <span data-s="date"></span>
 </footer>
+
+<div class="search-box">
+  <span>
+    <img src="./image/search.png"/>
+    <span class="search-input-edge"></span><input class="search-input"/><span class="search-input-edge"></span>
+  </span>
+  <ul class="search-result"></ul>
+</div>
+<script src="script/search_index.js"></script>
+<script src="script/search.js"></script>
 </body>
 </html>
