refactor: use ice-cap instead of spruce-template.

--- a/src/builder/template/details.html
+++ b/src/builder/template/details.html
@@ -1,59 +1,59 @@
-<h2 data-s="title"></h2>
-<div class="detail" data-s="detail">
-  <h3 data-s="anchor">
-    <span class="access" data-s="access"></span>
-    <span class="virtual" data-s="virtual"></span>
-    <span class="override" data-s="override"></span>
-    <span data-s="readonly"></span>
-    <span data-s="name"></span><span data-s="signature"></span>
-    <span class="right-info">
-      <span class="version" data-s="version">version </span>
-      <span class="since" data-s="since">since </span>
-    </span>
+<h2 data-ice="title"></h2>
+<div class="detail" data-ice="detail">
+  <h3 data-ice="anchor">
+    <span class="access" data-ice="access"></span>
+    <span class="virtual" data-ice="virtual"></span>
+    <span class="override" data-ice="override"></span>
+    <span data-ice="readonly"></span>
+    <span data-ice="name"></span><span data-ice="signature"></span>
+  <span class="right-info">
+    <span class="version" data-ice="version">version </span>
+    <span class="since" data-ice="since">since </span>
+  </span>
   </h3>
 
-  <div class="deprecated" data-s="deprecated"></div>
-  <div class="experimental" data-s="experimental"></div>
-  <div data-s="description">description</div>
-  <div data-s="inherit"><h4>Override: </h4></div>
-  <div data-s="defaultvalue"><h4>Default: </h4></div>
+  <div class="deprecated" data-ice="deprecated"></div>
+  <div class="experimental" data-ice="experimental"></div>
+  <div data-ice="description"></div>
+  <div data-ice="inherit"><h4>Override: </h4></div>
+  <div data-ice="defaultvalue"><h4>Default: </h4></div>
 
-  <div data-s="properties"></div>
+  <div data-ice="properties"></div>
 
-  <div class="return-params" data-s="returnParams">
+  <div class="return-params" data-ice="returnParams">
     <h4>Return:</h4>
     <table>
       <tr>
-        <td class="return-type" data-s="returnType"></td>
-        <td class="return-desc" data-s="returnDescription"></td>
+        <td class="return-type" data-ice="returnType"></td>
+        <td class="return-desc" data-ice="returnDescription"></td>
       </tr>
     </table>
-    <div data-s="returnProperties"></div>
+    <div data-ice="returnProperties"></div>
   </div>
 
-  <div data-s="this"><h4>This:</h4> </div>
-  <div data-s="fire"><h4>Fire:</h4></div>
-  <div data-s="listen"><h4>Listen:</h4></div>
+  <div data-ice="this"><h4>This:</h4> </div>
+  <div data-ice="fire"><h4>Fire:</h4></div>
+  <div data-ice="listen"><h4>Listen:</h4></div>
 
-  <div data-s="throwWrap">
+  <div data-ice="throwWrap">
     <h4>Throw:</h4>
     <table>
       <tbody>
-        <tr class="throw" data-s="throw">
-          <td data-s="throwName"></td>
-          <td data-s="throwDesc"></td>
-        </tr>
+      <tr class="throw" data-ice="throw">
+        <td data-ice="throwName"></td>
+        <td data-ice="throwDesc"></td>
+      </tr>
       </tbody>
     </table>
   </div>
 
-  <div data-s="example">
+  <div data-ice="example">
     <h4>Example:</h4>
-    <pre data-s="exampleDoc" class="prettyprint"><code data-s="exampleCode"></code></pre>
+    <pre data-ice="exampleDoc" class="prettyprint"><code data-ice="exampleCode"></code></pre>
   </div>
 
-  <div data-s="see"><h4>See:</h4></div>
-  <div data-s="require"><h4>Require:</h4></div>
-  <div data-s="author"><h4>Author:</h4></div>
-  <div data-s="todo"><h4>TODO:</h4></div>
+  <div data-ice="see"><h4>See:</h4></div>
+  <div data-ice="require"><h4>Require:</h4></div>
+  <div data-ice="author"><h4>Author:</h4></div>
+  <div data-ice="todo"><h4>TODO:</h4></div>
 </div>
