--- a/src/builder/template/summary.html
+++ b/src/builder/template/summary.html
@@ -1,28 +1,28 @@
-<table class="summary" data-s="summary">
-  <thead><tr><td data-s="title" colspan="3"></td></tr></thead>
+<table class="summary" data-ice="summary">
+  <thead><tr><td data-ice="title" colspan="3"></td></tr></thead>
   <tbody>
-  <tr data-s="target">
+  <tr data-ice="target">
     <td>
-      <span class="access" data-s="access"></span>
-      <span class="virtual" data-s="virtual"></span>
-      <span class="override" data-s="override"></span>
-      <span class="readonly" data-s="readonly"></span>
+      <span class="access" data-ice="access"></span>
+      <span class="virtual" data-ice="virtual"></span>
+      <span class="override" data-ice="override"></span>
+      <span class="readonly" data-ice="readonly"></span>
     </td>
     <td>
       <div>
         <p>
-          <span data-s="name">member</span><span data-s="signature"></span>
+          <span data-ice="name"></span><span data-ice="signature"></span>
         </p>
       </div>
       <div>
-        <div class="deprecated" data-s="deprecated"></div>
-        <div class="experimental" data-s="experimental"></div>
-        <div data-s="description">description</div>
+        <div class="deprecated" data-ice="deprecated"></div>
+        <div class="experimental" data-ice="experimental"></div>
+        <div data-ice="description"></div>
       </div>
     </td>
     <td>
-      <span class="version" data-s="versionLabel">version <span data-s="version"></span></span>
-      <span class="since" data-s="sinceLabel">since <span data-s="since"></span></span>
+      <span class="version" data-ice="versionLabel">version <span data-ice="version"></span></span>
+      <span class="since" data-ice="sinceLabel">since <span data-ice="since"></span></span>
     </td>
   </tr>
   </tbody>
