--- a/src/builder/template/file-footer.html
+++ b/src/builder/template/file-footer.html
@@ -1,4 +1,4 @@
 <div>
-  <span>Copyright: <span data-s="copyright"></span></span>
-  <span>License: <span data-s="license"></span></span>
+  <span>Copyright: <span data-ice="copyright"></span></span>
+  <span>License: <span data-ice="license"></span></span>
 </div>
