--- a/src/builder/template/index.html
+++ b/src/builder/template/index.html
@@ -1,17 +1,17 @@
 <div class="self-detail">
   <h1>
-    <span data-s="title"></span>
+    <span data-ice="title"></span>
   <span class="header-notice">
-    <span class="version" data-s="version">version: </span>
-    <span class="url"><a data-s="url"></a></span>
+    <span class="version" data-ice="version">version: </span>
+    <span class="url"><a data-ice="url"></a></span>
   </span>
   </h1>
-  <div data-s="description"></div>
+  <div data-ice="description"></div>
 </div>
 
-<div data-s="moduleSummary"><h2>Module Summary</h2></div>
-<div data-s="namespaceSummary"><h2>Namespace Summary</h2></div>
-<div data-s="classSummary"><h2>Class Summary</h2></div>
-<div data-s="interfaceSummary"><h2>Interface Summary</h2></div>
-<div data-s="mixinSummary"><h2>Mixin Summary</h2></div>
-<div data-s="fileSummary"><h2>File Summary</h2></div>
+<div data-ice="moduleSummary"><h2>Module Summary</h2></div>
+<div data-ice="namespaceSummary"><h2>Namespace Summary</h2></div>
+<div data-ice="classSummary"><h2>Class Summary</h2></div>
+<div data-ice="interfaceSummary"><h2>Interface Summary</h2></div>
+<div data-ice="mixinSummary"><h2>Mixin Summary</h2></div>
+<div data-ice="fileSummary"><h2>File Summary</h2></div>
