--- a/src/builder/template/nav.html
+++ b/src/builder/template/nav.html
@@ -1,43 +1,43 @@
 <h1><a href="./">HOME</a> | <a href="@readme.html">README</a></h1>
 
-<div data-s="classWrap">
+<div data-ice="classWrap">
   <h2>Class</h2>
   <ul>
-    <li data-s="classDoc"></li>
+    <li data-ice="classDoc"></li>
   </ul>
 </div>
 
-<div data-s="interfaceWrap">
+<div data-ice="interfaceWrap">
   <h2>Interface</h2>
   <ul>
-    <li data-s="interfaceDoc"></li>
+    <li data-ice="interfaceDoc"></li>
   </ul>
 </div>
 
-<div data-s="namespaceWrap">
+<div data-ice="namespaceWrap">
   <h2>Namespace</h2>
   <ul>
-    <li data-s="namespaceDoc"></li>
+    <li data-ice="namespaceDoc"></li>
   </ul>
 </div>
 
-<div data-s="moduleWrap">
+<div data-ice="moduleWrap">
   <h2>Module</h2>
   <ul>
-    <li data-s="moduleDoc"></li>
+    <li data-ice="moduleDoc"></li>
   </ul>
 </div>
 
-<div data-s="mixinWrap">
+<div data-ice="mixinWrap">
   <h2>Mixin</h2>
   <ul>
-    <li data-s="mixinDoc"></li>
+    <li data-ice="mixinDoc"></li>
   </ul>
 </div>
 
-<div data-s="fileWrap">
+<div data-ice="fileWrap">
   <h2>File</h2>
   <ul>
-    <li data-s="fileDoc"></li>
+    <li data-ice="fileDoc"></li>
   </ul>
 </div>
