--- a/src/builder/template/object.html
+++ b/src/builder/template/object.html
@@ -1,74 +1,74 @@
 <div class="header-notice">
-  <div data-s="memberof"></div>
-  <span data-s="access"></span>
-  <span data-s="kind"></span>
-  <span data-s="variation">| variation </span>
-  <span data-s="version">| version </span>
-  <span data-s="since">| since </span>
-  <span data-s="file">| file </span>
+  <div data-ice="memberof"></div>
+  <span data-ice="access"></span>
+  <span data-ice="kind"></span>
+  <span data-ice="variation">| variation </span>
+  <span data-ice="version">| version </span>
+  <span data-ice="since">| since </span>
+  <span data-ice="file">| file </span>
 </div>
 
 <div class="self-detail detail">
-  <h1 data-s="name"></h1>
+  <h1 data-ice="name"></h1>
 
-  <div class="flat-list" data-s="extendsChain"><h4>Extends:</h4></div>
-  <div class="flat-list" data-s="directSubclass"><h4>Direct Subclass:</h4></div>
-  <div class="flat-list" data-s="indirectSubclass"><h4>Indirect Subclass:</h4></div>
-  <div class="flat-list" data-s="implements"><h4>Implements:</h4></div>
-  <div class="flat-list" data-s="indirectImplements"><h4>Indirect Implements:</h4></div>
-  <div class="flat-list" data-s="mixes"><h4>Mixes:</h4></div>
-  <div class="flat-list" data-s="indirectMixes"><h4>Indirect Mixes:</h4></div>
-  <div class="flat-list" data-s="directImplemented"><h4>Direct Implemented:</h4></div>
-  <div class="flat-list" data-s="indirectImplemented"><h4>Indirect Implemented:</h4></div>
-  <div class="flat-list" data-s="directMixed"><h4>Direct Mixed:</h4></div>
-  <div class="flat-list" data-s="indirectMixed"><h4>Indirect Mixed:</h4></div>
+  <div class="flat-list" data-ice="extendsChain"><h4>Extends:</h4></div>
+  <div class="flat-list" data-ice="directSubclass"><h4>Direct Subclass:</h4></div>
+  <div class="flat-list" data-ice="indirectSubclass"><h4>Indirect Subclass:</h4></div>
+  <div class="flat-list" data-ice="implements"><h4>Implements:</h4></div>
+  <div class="flat-list" data-ice="indirectImplements"><h4>Indirect Implements:</h4></div>
+  <div class="flat-list" data-ice="mixes"><h4>Mixes:</h4></div>
+  <div class="flat-list" data-ice="indirectMixes"><h4>Indirect Mixes:</h4></div>
+  <div class="flat-list" data-ice="directImplemented"><h4>Direct Implemented:</h4></div>
+  <div class="flat-list" data-ice="indirectImplemented"><h4>Indirect Implemented:</h4></div>
+  <div class="flat-list" data-ice="directMixed"><h4>Direct Mixed:</h4></div>
+  <div class="flat-list" data-ice="indirectMixed"><h4>Indirect Mixed:</h4></div>
 
-  <div class="deprecated" data-s="deprecated"></div>
-  <div class="experimental" data-s="experimental"></div>
-  <div data-s="description"></div>
+  <div class="deprecated" data-ice="deprecated"></div>
+  <div class="experimental" data-ice="experimental"></div>
+  <div data-ice="description"></div>
 
-  <div data-s="see"><h4>See:</h4></div>
+  <div data-ice="see"><h4>See:</h4></div>
 
-  <div data-s="require"><h4>Requires:</h4></div>
+  <div data-ice="require"><h4>Requires:</h4></div>
 
-  <div data-s="fileexampleDocs">
+  <div data-ice="fileexampleDocs">
     <h4>Example:</h4>
-    <pre class="prettyprint" data-s="fileexampleDoc"><code data-s="fileexampleCode"></code></pre>
+    <pre class="prettyprint" data-ice="fileexampleDoc"><code data-ice="fileexampleCode"></code></pre>
   </div>
 
-  <div data-s="author"><h4>Author:</h4></div>
-  <div data-s="todo"><h4>TODO:</h4></div>
+  <div data-ice="author"><h4>Author:</h4></div>
+  <div data-ice="todo"><h4>TODO:</h4></div>
 </div>
 
-<div data-s="namespaceSummary"><h2>Namespace Summary</h2></div>
-<div data-s="classSummary"><h2>Class Summary</h2></div>
-<div data-s="interfaceSummary"><h2>Interface Summary</h2></div>
-<div data-s="mixinSummary"><h2>Mixin Summary</h2></div>
-<div data-s="staticMemberSummary"><h2>Static Member Summary</h2></div>
-<div data-s="staticMethodSummary"><h2>Static Method Summary</h2></div>
-<div data-s="constructorSummary"><h2>Constructor Summary</h2></div>
-<div data-s="memberSummary"><h2>Member Summary</h2></div>
-<div data-s="methodSummary"><h2>Method Summary</h2></div>
-<div data-s="typedefSummary"><h2>Typedef Summary</h2></div>
-<div data-s="eventSummary"><h2>Event Summary</h2></div>
-<div data-s="constSummary"><h2>Const Summary</h2></div>
-<div data-s="enumSummary"><h2>Enum Summary</h2></div>
-<div data-s="callbackSummary"><h2>Callback Summary</h2></div>
+<div data-ice="namespaceSummary"><h2>Namespace Summary</h2></div>
+<div data-ice="classSummary"><h2>Class Summary</h2></div>
+<div data-ice="interfaceSummary"><h2>Interface Summary</h2></div>
+<div data-ice="mixinSummary"><h2>Mixin Summary</h2></div>
+<div data-ice="staticMemberSummary"><h2>Static Member Summary</h2></div>
+<div data-ice="staticMethodSummary"><h2>Static Method Summary</h2></div>
+<div data-ice="constructorSummary"><h2>Constructor Summary</h2></div>
+<div data-ice="memberSummary"><h2>Member Summary</h2></div>
+<div data-ice="methodSummary"><h2>Method Summary</h2></div>
+<div data-ice="typedefSummary"><h2>Typedef Summary</h2></div>
+<div data-ice="eventSummary"><h2>Event Summary</h2></div>
+<div data-ice="constSummary"><h2>Const Summary</h2></div>
+<div data-ice="enumSummary"><h2>Enum Summary</h2></div>
+<div data-ice="callbackSummary"><h2>Callback Summary</h2></div>
 
-<div class="inherited-summary" data-s="inheritedSummary"><h2>Inherited Summary</h2></div>
+<div class="inherited-summary" data-ice="inheritedSummary"><h2>Inherited Summary</h2></div>
 
-<div data-s="staticMemberDetails"></div>
-<div data-s="staticMethodDetails"></div>
-<div data-s="constructorDetails"></div>
-<div data-s="memberDetails"></div>
-<div data-s="methodDetails"></div>
-<div data-s="typedefDetails"></div>
-<div data-s="eventDetails"></div>
-<div data-s="constDetails"></div>
-<div data-s="enumDetails"></div>
-<div data-s="callbackDetails"></div>
+<div data-ice="staticMemberDetails"></div>
+<div data-ice="staticMethodDetails"></div>
+<div data-ice="constructorDetails"></div>
+<div data-ice="memberDetails"></div>
+<div data-ice="methodDetails"></div>
+<div data-ice="typedefDetails"></div>
+<div data-ice="eventDetails"></div>
+<div data-ice="constDetails"></div>
+<div data-ice="enumDetails"></div>
+<div data-ice="callbackDetails"></div>
 
-<div data-s="sourceCodeWrap">
+<div data-ice="sourceCodeWrap">
   <h2>Source Code</h2>
-  <pre class="prettyprint"><code data-s="sourceCode"></code></pre>
+  <pre class="prettyprint"><code data-ice="sourceCode"></code></pre>
 </div>
