--- a/src/builder/template/properties.html
+++ b/src/builder/template/properties.html
@@ -1,15 +1,15 @@
-<div data-s="properties">
-  <h4 data-s="title">Parameters:</h4>
+<div data-ice="properties">
+  <h4 data-ice="title">Parameters:</h4>
   <table class="params">
     <thead>
     <tr><td>Name</td><td>Type</td><td>Attribute</td><td>Description</td></tr>
     </thead>
     <tbody>
-    <tr data-s="property">
-      <td data-s="name">x</td>
-      <td data-s="type">number</td>
-      <td data-s="appendix">optional</td>
-      <td data-s="description">desc</td>
+    <tr data-ice="property">
+      <td data-ice="name"></td>
+      <td data-ice="type"></td>
+      <td data-ice="appendix"></td>
+      <td data-ice="description"></td>
     </tr>
     </tbody>
   </table>
