refactor: fix warning.

--- a/src/builder/template/summary.html
+++ b/src/builder/template/summary.html
@@ -21,8 +21,8 @@
       </div>
     </td>
     <td>
-      <span class="version" data-ice="versionLabel">version <span data-ice="version"></span></span>
-      <span class="since" data-ice="sinceLabel">since <span data-ice="since"></span></span>
+      <span class="version" data-ice="version">version </span>
+      <span class="since" data-ice="since">since </span>
     </td>
   </tr>
   </tbody>
