--- a/src/builder/template/object.html
+++ b/src/builder/template/object.html
@@ -1,5 +1,6 @@
 <div class="header-notice">
   <div data-ice="memberof"></div>
+  <div data-ice="importPath" class="import-path"><pre class="prettyprint"><code data-ice="importPathCode"></code></pre></div>
   <span data-ice="access"></span>
   <span data-ice="kind"></span>
   <span data-ice="variation">| variation </span>
