fix: summary and detail scope.

--- a/src/builder/template/properties.html
+++ b/src/builder/template/properties.html
@@ -1,5 +1,5 @@
 <div data-ice="properties">
-  <h4 data-ice="title">Parameters:</h4>
+  <h4 data-ice="title"></h4>
   <table class="params">
     <thead>
     <tr><td>Name</td><td>Type</td><td>Attribute</td><td>Description</td></tr>
